--- a/views/home.hbs
+++ b/views/home.hbs
@@ -357,12 +357,12 @@
               </div>
               <!-- /galery item -->
 
-              {{!
+              
             <!-- galery item -->
             <div class="galery-item">
               <img src="./img/galery/new_7.jpg" alt="">
             </div>
-            <!-- /galery item --> }}
+            <!-- /galery item --> 
 
               <!-- galery item -->
               <div class="galery-item">
@@ -382,34 +382,21 @@
               </div>
               <!-- /galery item -->
 
-              {{!
+              <!-- galery item -->
+              <div class="galery-item">
+                <img src="./img/galery/new_11.jpg" alt="" />
+              </div>
+              <!-- /galery item -->
+
             <!-- galery item -->
             <div class="galery-item">
               <img src="./img/galery/new_12.jpg" alt="">
             </div>
-            <!-- /galery item --> }}
+            <!-- /galery item --> 
 
               <!-- galery item -->
               <div class="galery-item">
-                <img src="./img/galery/new_15.jpg" alt="" />
-              </div>
-              <!-- /galery item -->
-
-              <!-- galery item -->
-              <div class="galery-item">
-                <img src="./img/galery/new_13.jpg" alt="" />
-              </div>
-              <!-- /galery item -->
-
-              <!-- galery item -->
-              <div class="galery-item">
-                <img src="./img/galery/new_14.jpg" alt="" />
-              </div>
-              <!-- /galery item -->
-
-              <!-- galery item -->
-              <div class="galery-item">
-                <img src="./img/galery/new_11.jpg" alt="" />
+                <img src="./img/galery/new_13.JPG" alt="" />
               </div>
               <!-- /galery item -->
 
