--- a/views/home.hbs
+++ b/views/home.hbs
@@ -396,7 +396,7 @@
 
               <!-- galery item -->
               <div class="galery-item">
-                <img src="./img/galery/new_13.JPG" alt="" />
+                <img src="./img/galery/new_13.jpg" alt="" />
               </div>
               <!-- /galery item -->
 
