--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -85,14 +85,14 @@
   <nav>
     <div class="img-container">
         <div class="footer-brand">
-            <a class="logo" href="/">
+            <a href="/" style="text-decoration: none;">
                 <img
                 class="logo-img"
                 src="./img/2022/navbar_logo.png"
                 alt="logo"
                 />
-            </a>
             <span>Dot</span><span>Slash</span>
+            </a>
         </div>
     </div>
   </nav>
