--- a/views/home.hbs
+++ b/views/home.hbs
@@ -864,14 +864,14 @@
             <!-- footer logo -->
             <div class="col-md-4">
               <div class="footer-brand">
-                <a class="logo" href="/">
+                <a class="logo" href="#home">
                   <img
                     class="logo-img"
                     src="./img/2022/navbar_logo.png"
                     alt="logo"
-                  />
-                </a>
+                  /> 
                 <span>Dot</span><span>Slash</span><span> 5.0</span>
+                </a>
               </div>
             </div>
             <!-- /footer logo -->
