--- a/views/home.hbs
+++ b/views/home.hbs
@@ -195,16 +195,10 @@
                   <div class="message__content">What is the date of hackathon?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">It's 30-31st Jan 2021</div>
+                  <div class="message__content">It will be announced soon</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">OK</div>
-                </div>
-                <div class="message message--browser">
-                  <div class="message__content">What's the last date of registration?</div>
-                </div>
-                <div class="message message--server">
-                  <div class="message__content">9th Jan 2021</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">What is the mode of conduct?</div>
