--- a/views/test.hbs
+++ b/views/test.hbs
@@ -362,8 +362,8 @@
                       <img
                         src="./img/ssip_logo.png"
                         alt="logo"
-                        height="68px"
-                        style="margin-bottom: 30px"
+                        height="80px"
+                        style="margin-bottom: 40px; margin-top: 10px"
                       />
                     </a>
                     <p>
@@ -383,7 +383,6 @@
                     </a>
                     <p>
                       ACM NIT – Surat is a student chapter highly focused on planning and organizing events for coding, development, design etc. Founded in 2005, the chapter has been a centre for various learning, fun, and productive activities. Be it coding challenges, hackathons, quizzes, or application development, the chapter has done its best. The activities of the chapter are widely acknowledged in the institute and keenly looked for. Massive turnout at every event shows the range of popularity the chapter has.
-The bar is being raised year after year. With announcement of Epiphany, CTF! in Quest, and other challenges as open-for-all contests, the chapter is aiming nationwide recognition.
 
                     </p>
                   </div>
@@ -514,52 +513,6 @@ The bar is being raised year after year. With announcement of Epiphany, CTF! in 
       </div>
       <!-- /Galery -->
 
-      <div class="container tracks section">
-        <br /><br />
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="section-title">
-              <h3 class="title"><span style="color: white">The &nbsp;</span><span
-                > Hackathon</span>
-              </h3>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-
-          <div class="col-md-8 col-md-offset-2">
-            <div class="row" style="text-align:center">
-              <img
-                src="img/soft.svg"
-                alt=""
-                style="margin: 0 auto; width: auto;"
-              />
-            </div>
-            <div class="row text-center" style="margin: auto 20px;">
-              <p>Explore the realms of Web and Mobile based applications while
-                developing your ideas. You are free to use any framework and any
-                code fragment, until and unless it is open sourced.</p>
-              <p>
-                The limits are endless and the possiblities are infinite.
-              </p>
-              <b style="color:  #bd0c0e;">Problem Statement will be provided at
-                the time of The Event.</b>
-            </div>
-            <br />
-            <br />
-          </div>
-          {{! <div class="col-xs-6">
-          <h2 style="color: #bd0c0e">Hardware</h2>
-          <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
-          <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track
-            you can use any microcontroller or microprocessor with any interfacing peripheral to achieve your goal.
-            <br>If you have some special hardware requirements, we request you to bring those alongwith.
-            <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
-          </p>
-        </div> }}
-          <br />
-        </div>
-      </div>
 
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
