--- a/views/test.hbs
+++ b/views/test.hbs
@@ -230,7 +230,60 @@
       </div>
       <!-- /Hero -->
 
-      <!-- About -->
+
+      <div class="container tracks section">
+        <br /><br />
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="section-title">
+              <h3 class="title"><span style="color: white">About &nbsp;</span><span
+                > Dotslash</span>
+              </h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-md-8 col-md-offset-2">
+            <div class="row" style="text-align:center">
+              <img
+                src="img/soft.svg"
+                alt=""
+                style="margin: 0 auto; width: auto;"
+              />
+            </div>
+            <div class="row text-center" style="margin: auto 20px;">
+              <p>DotSlash​ is a 30 hours long hackathon which is completely
+                  managed by students of SVNIT, Surat. It is a platform for
+                  developers around the world to use their innovative skills to
+                  produce something new and useful for the society.
+              </p>
+              <p>Explore the realms of Web and Mobile based applications while
+                developing your ideas. You are free to use any framework and any
+                code fragment, until and unless it is open sourced.</p>
+              <p>
+                The limits are endless and the possiblities are infinite.
+              </p>
+              <b style="color:  #bd0c0e;">Problem Statement will be provided at
+                the time of The Event.</b>
+            </div>
+            <br />
+            <br />
+          </div>
+          {{! <div class="col-xs-6">
+          <h2 style="color: #bd0c0e">Hardware</h2>
+          <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
+          <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track
+            you can use any microcontroller or microprocessor with any interfacing peripheral to achieve your goal.
+            <br>If you have some special hardware requirements, we request you to bring those alongwith.
+            <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
+          </p>
+        </div> }}
+          <br />
+        </div>
+      </div>
+
+      {{!-- <!-- About -->
       <div id="about" class="section">
         <!-- container -->
         <div class="container">
@@ -305,7 +358,7 @@
         </div>
         <!-- /container -->
       </div>
-      <!-- /About -->
+      <!-- /About --> --}}
 
       
       <!-- Supported By -->
@@ -316,7 +369,8 @@
           <div class="row">
             <!-- section title -->
             <div class="section-title">
-              <h3 class="title"><span>Supported by</span></h3>
+              <h3 class="title"><span style="color: white">Supported &nbsp;</span><span style="color: #bd0c0e;"
+                > by</span></h3>
             </div>
             <!-- /section title -->
 
