--- a/views/test.hbs
+++ b/views/test.hbs
@@ -367,35 +367,18 @@
               </div>
             </div>
           </div>
-          
-          
-
-          
+    
           </div>
           <!-- row -->
         </div>
         <!-- /container -->
       </div>
-      <!-- /About -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      <!-- /Supported by -->
 
 
 
       <!-- Galery -->
-      <div id="galery">
+      <div id="galery" style="margin-top: 80px;">
         <!-- container -->
         <div class="container">
           <!-- row -->
