--- a/views/with_ssip.hbs
+++ b/views/with_ssip.hbs
@@ -260,6 +260,14 @@
                 />
               </a>
 
+              <a href="http://www.ssipgujarat.in/">
+                <img
+                  src="./img/ssip_logo.png"
+                  alt="logo"
+                  height="68px"
+                />
+              </a>
+
               <a href="https://nitsurat.acm.org/">
                 <img
                   src="./img/acm_logo.png"
