--- a/views/home.hbs
+++ b/views/home.hbs
@@ -230,7 +230,61 @@
       </div>
       <!-- /Hero -->
 
-      <!-- About -->
+
+      <div class="container tracks section">
+        <br /><br />
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="section-title">
+              <h3 class="title"><span style="color: white">About &nbsp;</span><span
+                > Dotslash</span>
+              </h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+
+          <div class="col-md-8 col-md-offset-2">
+            <div class="row" style="text-align:center">
+              <img
+                src="img/soft.svg"
+                alt=""
+                style="margin: 0 auto; width: auto;"
+              />
+            </div>
+            <div class="row text-center" style="margin: auto 20px;">
+              <p>DotSlash​ is a 30 hours long hackathon which is completely
+                  managed by students of SVNIT, Surat. It is a platform for
+                  developers around the world to use their innovative skills to
+                  produce something new and useful for the society.
+              </p>
+              <p>Explore the realms of Web and Mobile based applications while
+                developing your ideas. You are free to use any framework and any
+                code fragment, until and unless it is open sourced.</p>
+              <p>
+                The limits are endless and the possiblities are infinite.
+              </p>
+              <b style="color:  #bd0c0e;">Problem Statement will be provided at
+                the time of The Event.</b>
+            </div>
+            <br />
+            <br />
+          </div>
+          {{! <div class="col-xs-6">
+          <h2 style="color: #bd0c0e">Hardware</h2>
+          <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
+          <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track
+            you can use any microcontroller or microprocessor with any interfacing peripheral to achieve your goal.
+            <br>If you have some special hardware requirements, we request you to bring those alongwith.
+            <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
+          </p>
+        </div> }}
+          <br />
+        </div>
+      </div>
+
+      
+      <!-- Supported By -->
       <div id="about" class="section">
         <!-- container -->
         <div class="container">
@@ -238,69 +292,97 @@
           <div class="row">
             <!-- section title -->
             <div class="section-title">
-              <h3 class="title"><span>About</span>
-                <span style="color: #bd0c0e;">DotSlash</span></h3>
+              <h3 class="title"><span style="color: white">Supported &nbsp;</span><span style="color: #bd0c0e;"
+                > by</span></h3>
             </div>
             <!-- /section title -->
 
-            <div class="college" style="text-align:center; margin-top:-20px;">
-              <a href="https://www.svnit.ac.in/">
-                <img
-                src="./img/svnit.png"
-                alt="logo"
-                style="height:120px;width:120px;border-radius:50%;"
-              />
-              </a>
 
-              <a href="http://ashine.in/">
-                <img
-                  src="./img/ashine.png"
-                  alt="logo"
-                  style="height:120px;width:120px;border-radius:50%;"
-                />
-              </a>
-
-              <a href="https://nitsurat.acm.org/">
-                <img
-                  src="./img/acm_logo.png"
-                  alt="logo"
-                  style="height:120px;width:120px;border-radius:50%;"
-                />   
-              </a>
-
-            </div><br /><br />
-
-            <div class="col-md-8 col-md-offset-2 text-center">
-              <!-- about content -->
-              <div class="about-content">
-                <p>The Sardar Vallabhbhai National Institute of Technology,
-                  Surat (NIT Surat), perceives to be a globally accepted centre
-                  of excellence in technical education catalysing the transfer
-                  of high technologies resulting in enhanced quality. Ashine
-                  research park, SVNIT brings to you DotSlash-an inception
-                  towards letting our innovations begin.
-                </p>
-                <br />
-                <p>DotSlash​ is a 30 hours long hackathon which is completely
-                  managed by students of SVNIT, Surat. It is a platform for
-                  developers around the world to use their innovative skills to
-                  produce something new and useful for the society.
-                </p>
-                {{! <a
-                href="https://join.slack.com/t/dotslashhackathon/shared_invite/enQtODY3MjMwOTIxOTA5LTU1YjdhZWUyOTMwZjk3MTU3NDkyNTlkMWQ0MzNiZTE5ZjRiM2FiYWM3NjdhNzdmM2UzNGZjMWUzMDQ2M2YyN2I"
-                target="_blank"><button id="slackBtn"><i class="fa fa-slack"></i> Slack Channel</button></a> }}
+          <div id="sponsorChallenges" >
+            <div class="container">
+              <div class="row">
+                <center>
+                  <div class="flip" style="max-width: 700px;">
+                    <div class="front content text-center"
+                      style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
+                      <a href="https://www.svnit.ac.in/">
+                        <img
+                        src="./img/svnit.png"
+                        alt="logo"
+                        style="height:120px;width:120px;border-radius:50%; margin-bottom: 30px"
+                      />
+                      </a>
+                      <p>
+                        Sardar Vallabhbhai National Institute of Technology, Surat is a leading technical Institute not only at national level but also at International level for imparting training to students as per the needs of technology. It is also envisaged to provide the necessary infrastructure to take up research work and to provide the mechanism to interact with industries effectively.
+                      </p>
+                    </div>
+                  </div>
+                </center>
+                
               </div>
-              <!-- /about content -->
+              <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                  <div class="front content text-center"
+                    style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
+                    <a href="http://ashine.in/">
+                      <img
+                        src="./img/ashine.png"
+                        alt="logo"
+                        style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
+                      />
+                    </a>
+                    <p>
+                      ASHINE is a Technology Business Incubator located at the centre of Sardar Vallabhbhai National Institute of Technology (SVNIT), Surat spread across 250 acres of lush-green campus having all the modern educational and recreational facilities for students. With an infrastructure that can support 30+ tech and non-tech startups and 200 startup enthusiasts from across the nation.
+                    </p>
+                  </div>
+                </div>
+
+                {{!-- <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                  <div class="front content text-center"
+                    style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
+                    <a href="http://www.ssipgujarat.in/">
+                      <img
+                        src="./img/ssip_logo.png"
+                        alt="logo"
+                        height="80px"
+                        style="margin-bottom: 40px; margin-top: 10px"
+                      />
+                    </a>
+                    <p>
+                      Government of Gujarat has developed a policy for providing assistance to Startups/ Innovation. Under this scheme, any individual/ group of individuals having innovative idea/ Concept will be eligible and/ or Universities/ education institutions, Incubation Centre/ PSUs/ R&D Institutions/ Private and other establishments will be eligible as an institution to support and mentor to innovators as approved by Committee. Startups in an economy's technology sectors is an important indicator of technological performance for several reasons.
+                    </p>
+                  </div>
+                </div> --}}
+                <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                  <div class="front content text-center"
+                    style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
+                    <a href="https://nitsurat.acm.org/">
+                      <img
+                        src="./img/acm_logo.png"
+                        alt="logo"
+                        style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
+                      />
+                    </a>
+                    <p>
+                      ACM NIT Surat is a student chapter highly focused on planning and organizing events for coding, development, design etc. Founded in 2005, the chapter has been a centre for various learning, fun, and productive activities. Be it coding challenges, hackathons, quizzes, or application development, the activities of the chapter are widely acknowledged in the institute and keenly looked for. 
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+    
           </div>
           <!-- row -->
         </div>
         <!-- /container -->
       </div>
-      <!-- /About -->
+      <!-- /Supported by -->
+
+
 
       <!-- Galery -->
-      <div id="galery">
+      <div id="galery" style="margin-top: 80px;">
         <!-- container -->
         <div class="container">
           <!-- row -->
@@ -395,52 +477,6 @@
       </div>
       <!-- /Galery -->
 
-      <div class="container tracks section">
-        <br /><br />
-        <div class="row">
-          <div class="col-xs-12">
-            <div class="section-title">
-              <h3 class="title"><span style="color: white">The &nbsp;</span><span
-                > Hackathon</span>
-              </h3>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-
-          <div class="col-md-8 col-md-offset-2">
-            <div class="row" style="text-align:center">
-              <img
-                src="img/soft.svg"
-                alt=""
-                style="margin: 0 auto; width: auto;"
-              />
-            </div>
-            <div class="row text-center" style="margin: auto 20px;">
-              <p>Explore the realms of Web and Mobile based applications while
-                developing your ideas. You are free to use any framework and any
-                code fragment, until and unless it is open sourced.</p>
-              <p>
-                The limits are endless and the possiblities are infinite.
-              </p>
-              <b style="color:  #bd0c0e;">Problem Statement will be provided at
-                the time of The Event.</b>
-            </div>
-            <br />
-            <br />
-          </div>
-          {{! <div class="col-xs-6">
-          <h2 style="color: #bd0c0e">Hardware</h2>
-          <img src="img/hardware.png" class="img-responsive" alt="" style="margin: 0 auto; width: auto;">
-          <p style="margin-bottom:5px;">Want to develop your ideas to interact with the physical world? Under this track
-            you can use any microcontroller or microprocessor with any interfacing peripheral to achieve your goal.
-            <br>If you have some special hardware requirements, we request you to bring those alongwith.
-            <br><b style="color:  #bd0c0e;">The track will contain problem statements.</b>
-          </p>
-        </div> }}
-          <br />
-        </div>
-      </div>
 
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
