Font Size Increase + Highlights Title

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -253,18 +253,18 @@
               />
             </div>
             <div class="row text-center" style="margin: auto 20px;">
-              <p>DotSlash​ is a 30 hours long hackathon which is completely
+              <p style="font-size: 17px;">DotSlash​ is a 30 hours long hackathon which is completely
                   managed by students of SVNIT, Surat. It is a platform for
                   developers around the world to use their innovative skills to
                   produce something new and useful for the society.
               </p>
-              <p>Explore the realms of Web and Mobile based applications while
+              <p style="font-size: 17px;">Explore the realms of Web and Mobile based applications while
                 developing your ideas. You are free to use any framework and any
                 code fragment, until and unless it is open sourced.</p>
-              <p>
+              <p style="font-size: 17px;">
                 The limits are endless and the possiblities are infinite.
               </p>
-              <b style="color:  #bd0c0e;">Problem Statement will be provided at
+              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statement will be provided at
                 the time of The Event.</b>
             </div>
             <br />
@@ -387,6 +387,10 @@
         <div class="container">
           <!-- row -->
           <div class="row">
+
+            <div class="section-title">
+              <h3 class="title"><span style="color: white;">Highlights </span></h3>
+            </div>
             <!-- galery owl -->
             <div id="galery-owl" class="owl-carousel owl-theme">
               <!-- galery item -->
