--- a/views/home.hbs
+++ b/views/home.hbs
@@ -195,7 +195,7 @@
                   <div class="message__content">What is the date of hackathon?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">It will be announced soon</div>
+                  <div class="message__content">8-9 Jan 2022</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">OK</div>
