--- a/views/home.hbs
+++ b/views/home.hbs
@@ -151,26 +151,12 @@
               </div>
               
                <div class="hero__content__banner_slogan">
-                <div class="animated delay-5s fadeOut">
-                  <span class="fadeIn animated delay-1s">
-                    Register
-                  </span>
-                  <span class="fadeIn animated delay-2s">
-                    Compete
-                  </span>
-                  <span class="fadeIn animated delay-3s">
-                    Win
-                  </span>
-                  <span class="fadeIn animated delay-4s">
-                    Brag
-                  </span>
-                </div>
-                <div class="save_the_date zoomIn animated delay-5s">
-                  Coming Soon!
+                <div>
+                  <h2 ><span>8-9</span>January 2022</h2>
                 </div>
               </div>
             <form class="notify-me" action="/api/email" method="POST">
-              <div class="registration__details fadeIn animated delay-5s" style="margin-top: 30px;">
+              <div class="registration__details" style="margin-top: 30px;">
                 <input type="email" name="email" id="user-email" placeholder="Enter your email" >
                 <input type="submit" id="notify-btn" value="Notify Me">
               </div>
